--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <form>
                     <div class="form-group">
                         <label>Check In</label>
-                        <input type="date" required/>
+                        <input type="date" required />
                     </div>
                     <div class="form-group">
                         <label>Check Out</label>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="form-group">
                         <label>Guests</label>
-                        <input type="number" placeholder="Number of Guests" required/>
+                        <input type="number" placeholder="Number of Guests" required />
                     </div>
                     <div class="form-group">
                         <label>Accommodations
@@ -103,6 +103,186 @@
                         </svg>
                     </button>
                 </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Adventure -->
+
+    <section class="adventure">
+        <div class="container">
+            <div class="adventure-title">
+                <a href="#" class="btn-primary">Popular Activities</a>
+                <h2>Explore Real Adventure</h2>
+            </div>
+            <div class="adventure-inner">
+                <div class="adventure-items">
+                    <div class="single-features-item-two mb-40 wow fadeInUp" style="visibility: visible;">
+                        <div class="img-holder">
+                            <img src="asstes/img/background /feat-5.jpg" alt="Features Image" width="100%">
+                            <div class="item-overlay">
+                                <div class="content">
+                                    <h3 class="title">Tent Camping</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-features-item-two " style="visibility: visible;">
+                        <div class="img-holder">
+                            <img src="asstes/img/background /feat-6.jpg" alt="Features Image" width="100%">
+                            <div class="item-overlay">
+                                <div class="content">
+                                    <h3 class="title">Mountain Biking</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-features-item-two" style="visibility: visible;">
+                        <div class="img-holder">
+                            <img src="asstes/img/background /feat-7.jpg" alt="Features Image" width="100%">
+
+                        </div>
+                        <div class="item-overlay">
+                            <div class="content">
+                                <h3 class="title">Fishing</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-features-item-two" style="visibility: visible;">
+                        <div class="img-holder">
+                            <img src="asstes/img/background /feat-8.jpg" alt="Features Image" width="100%">
+                            <div class="item-overlay">
+                                <div class="content">
+                                    <h3 class="title">Kayaking</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About -->
+
+
+    <section class="about about-two_content-box">
+        <div class="container">
+            <div class="about-inner">
+                <div class="about-item">
+                    <div class="content-about">
+                        <a href="#" class="btn-primary">About Company</a>
+                        <h2>We Are Most Funning Company About Travel and Adventure</h2>
+                        <p>Sit amet consectetur. Velit integer tincidunt sceleries nodalesry volutpat neque fermentum malesuada sceleris quecy massa lacus
+                            Ultrices eget leo cras odio blandit rhoncus eues feugiat</p>
+                        <div class="about-items">
+                            <div class="about-elementur">
+                                <div class="about-check d-flex align-center">
+                                    <a href="javascript:void(0)" class="ri-check">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+                                            <path d="M9 12l2 2l4 -4"></path>
+                                        </svg>
+                                    </a>
+                                    <h4>Family Camping</h4>
+                                </div>
+                            </div>
+                            <div class="about-elementur">
+                                <div class="about-check d-flex align-center">
+                                    <a href="javascript:void(0)" class="ri-check">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+                                            <path d="M9 12l2 2l4 -4"></path>
+                                        </svg>
+                                    </a>
+                                    <h4>Mountaim Biking </h4>
+                                </div>
+                            </div>
+                            <div class="about-elementur">
+                                <div class="about-check d-flex align-center">
+                                    <a href="javascript:void(0)" class="ri-check">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+                                            <path d="M9 12l2 2l4 -4"></path>
+                                        </svg>
+                                    </a>
+                                    <h4>Luxury Cabin</h4>
+                                </div>
+                            </div>
+                            <div class="about-elementur">
+                                <div class="about-check d-flex align-center">
+                                    <a href="javascript:void(0)" class="ri-check">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+                                            <path d="M9 12l2 2l4 -4"></path>
+                                        </svg>
+                                    </a>
+                                    <h4>Couple Camping</h4>
+                                </div>
+                            </div>
+                            <div class="about-elementur">
+                                <div class="about-check d-flex align-center">
+                                    <a href="javascript:void(0)" class="ri-check">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+                                            <path d="M9 12l2 2l4 -4"></path>
+                                        </svg>
+                                    </a>
+                                    <h4>Wild Camping</h4>
+                                </div>
+                            </div>
+                            <div class="about-elementur">
+                                <div class="about-check d-flex align-center">
+                                    <a href="javascript:void(0)" class="ri-check">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+                                            <path d="M9 12l2 2l4 -4"></path>
+                                        </svg>
+                                    </a>
+                                    <h4>Fishing</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-items">
+                    <div class="whoimg">
+                        <img src="asstes/img/background /about-1.jpg" style="display: block;" height="100%" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- whosection -->
+
+    <section class="whosection">
+        <div class="container">
+            <div class="whoinner">
+                <div class="whoitems">
+                    <div class="whoimg">
+                        <img src="asstes/img/background /we-1.jpg" style="display: block;" height="100%" />
+                    </div>
+                </div>
+                <div class="whoitems">
+                    <div class="whocontent">
+                        <a href="#" class="btn-primary">Who We Are</a>
+                        <h2>Great Opportunity For Adventure & Travels</h2>
+                        <p>Set perspiciatis unde omnis iste natus error voluptatem accusantium doloremue laudantium totam rem aperiam eaque quae abillo inventore
+                            veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                        <div class="progre">
+                            <div role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="--value:60"></div>
+                            <div class="pro"></div>
+                            <div role="progressbar" aria-valuenow="93" aria-valuemin="0" aria-valuemax="100" style="--value:93"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
